# Claude-Code-Switcher

./: .gitignore  Cargo.toml  ICON_SETUP.md  LICENSE  README.md  build-macos.sh  build.bat  build.rs  build.sh  generate_icons.sh
.claude/: settings.local.json
resources/: app.rc
scripts/: generate_icons.py
src/: main.rs
