[package]
name = "claude-code-switcher"
version = "0.1.2"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A desktop application for switching Claude Code configurations"
license = "MIT OR Apache-2.0"
keywords = ["claude", "code", "switcher", "config", "gui"]
categories = ["gui", "config"]

[dependencies]
eframe = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
rfd = "0.14"
